Revise: php 통일 -> 프론트는 HTML+CSS+JS

--- a/app/src/index.html
+++ b/app/src/index.html
@@ -7,13 +7,9 @@
     <link href="styles/tailwind-output.css" rel="stylesheet" />
   </head>
   <body>
-    <?php
-      include "components/header.php";
-    ?>
+    <header>It is Header</header>
     <h1 class="text-4xl font-bold underline">Hello world!</h1>
     <p class="text-6xl">Hello! Man</p>
-    <?php
-      include "components/footer.php";
-    ?>
+    <footer>It is Footer</footer>
   </body>
 </html>
