--- a/app/src/index.html
+++ b/app/src/index.html
@@ -1,15 +1,25 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
   <head>
     <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link href="styles/global.css" rel="stylesheet" />
-    <link href="styles/tailwind-output.css" rel="stylesheet" />
+    <link rel="shortcut icon" href="public/favicon.ico" />
+    <title>Camagru</title>
+    <link href="styles/tailwind.css" rel="stylesheet" />
   </head>
   <body>
-    <header>It is Header</header>
-    <h1 class="text-4xl font-bold underline">Hello world!</h1>
-    <p class="text-6xl">Hello! Man</p>
-    <footer>It is Footer</footer>
+    <header class="h-32 px-80 flex justify-around items-center space-x-10 bg-white">
+      <a href="/" class="flex-auto"><h2 class="text-5xl">CAMAGRU</h2></a>
+      <a href="/camera" class="flex-none"><img src="public/camera-icon.svg" class="w-10" /></a>
+      <a href="/user/setting" class="flex-none"><img src="public/gear-icon.svg" class="w-10" /></a>
+      <a href="/auth/logout" class="flex-none"><img src="public/logout-icon.svg" class="w-10" /></a>
+    </header>
+    <main class="mx-80">
+      <img src="public/sample-image-chuu.jpeg" /><img src="public/sample-image-chuu.jpeg" /><img
+        src="public/sample-image-chuu.jpeg"
+      />
+    </main>
+    <footer class="h-32 px-80 flex items-center text-2xl bg-white">yopark in 42 Seoul, 2023</footer>
   </body>
 </html>
