Feat: header 아이콘 추가

--- a/app/src/index.html
+++ b/app/src/index.html
@@ -6,20 +6,109 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="shortcut icon" href="public/favicon.ico" />
     <title>Camagru</title>
-    <link href="styles/tailwind.css" rel="stylesheet" />
+    <link href="./styles/tailwind.css" rel="stylesheet" />
   </head>
   <body>
     <header class="h-32 px-80 flex justify-around items-center space-x-10 bg-white">
       <a href="/" class="flex-auto"><h2 class="text-5xl">CAMAGRU</h2></a>
-      <a href="/camera" class="flex-none"><img src="public/camera-icon.svg" class="w-10" /></a>
-      <a href="/user/setting" class="flex-none"><img src="public/gear-icon.svg" class="w-10" /></a>
+      <a href="/user/camera.html" class="flex-none"
+        ><img src="public/camera-icon.svg" class="w-10"
+      /></a>
+      <a href="/user/photos.html" class="flex-none"
+        ><img src="public/folder-icon.svg" class="w-10"
+      /></a>
+      <a href="/user/likes.html" class="flex-none"
+        ><img src="public/heart-icon.svg" class="w-10"
+      /></a>
+      <a href="/user/settings.html" class="flex-none"
+        ><img src="public/gear-icon.svg" class="w-10"
+      /></a>
       <a href="/auth/logout" class="flex-none"><img src="public/logout-icon.svg" class="w-10" /></a>
     </header>
-    <main class="mx-80">
-      <img src="public/sample-image-chuu.jpeg" /><img src="public/sample-image-chuu.jpeg" /><img
-        src="public/sample-image-chuu.jpeg"
-      />
+    <main class="mx-80 mt-20">
+      <div id="gallery">
+        <a href="photo/1">
+          <img src="./public/sample-image-bird.jpeg" />
+        </a>
+        <a href="photo/1">
+          <img src="./public/sample-image-bird.jpeg" />
+        </a>
+        <a href="photo/1">
+          <img src="./public/sample-image-bird.jpeg" />
+        </a>
+        <a href="photo/1">
+          <img src="./public/sample-image-bird.jpeg" />
+        </a>
+        <a href="photo/1">
+          <img src="./public/sample-image-bird.jpeg" />
+        </a>
+        <a href="photo/1">
+          <img src="./public/sample-image-bird.jpeg" />
+        </a>
+        <a href="photo/1">
+          <img src="./public/sample-image-bird.jpeg" />
+        </a>
+        <a href="photo/1">
+          <img src="./public/sample-image-bird.jpeg" />
+        </a>
+        <a href="photo/1">
+          <img src="./public/sample-image-bird.jpeg" />
+        </a>
+        <a href="photo/1">
+          <img src="./public/sample-image-bird.jpeg" />
+        </a>
+        <a href="photo/1">
+          <img src="./public/sample-image-bird.jpeg" />
+        </a>
+        <a href="photo/1">
+          <img src="./public/sample-image-bird.jpeg" />
+        </a>
+        <a href="photo/1">
+          <img src="./public/sample-image-bird.jpeg" />
+        </a>
+        <a href="photo/1">
+          <img src="./public/sample-image-bird.jpeg" />
+        </a>
+        <a href="photo/1">
+          <img src="./public/sample-image-bird.jpeg" />
+        </a>
+        <a href="photo/1">
+          <img src="./public/sample-image-bird.jpeg" />
+        </a>
+        <a href="photo/1">
+          <img src="./public/sample-image-bird.jpeg" />
+        </a>
+        <a href="photo/1">
+          <img src="./public/sample-image-bird.jpeg" />
+        </a>
+        <a href="photo/1">
+          <img src="./public/sample-image-bird.jpeg" />
+        </a>
+        <a href="photo/1">
+          <img src="./public/sample-image-bird.jpeg" />
+        </a>
+        <a href="photo/1">
+          <img src="./public/sample-image-bird.jpeg" />
+        </a>
+        <a href="photo/1">
+          <img src="./public/sample-image-bird.jpeg" />
+        </a>
+        <a href="photo/1">
+          <img src="./public/sample-image-bird.jpeg" />
+        </a>
+        <a href="photo/1">
+          <img src="./public/sample-image-bird.jpeg" />
+        </a>
+        <a href="photo/1">
+          <img src="./public/sample-image-bird.jpeg" />
+        </a>
+        <a href="photo/1">
+          <img src="./public/sample-image-bird.jpeg" />
+        </a>
+        <a href="photo/1">
+          <img src="./public/sample-image-bird.jpeg" />
+        </a>
+      </div>
     </main>
-    <footer class="h-32 px-80 flex items-center text-2xl bg-white">yopark in 42 Seoul, 2023</footer>
   </body>
 </html>
